[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "catweazleregister"
version = "1.0.1"
requires-python = ">=3.4"
authors = [
  {name = "Stephan.Schultchen", email = "stephan.schultchen@gmail.com"},
]
description = "catweazle, the now forked out register script"
dynamic = ["dependencies"]
license = {file = "LICENSE.txt"}
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
catweazle_register = "catweazle_register:main"

[tool.hatch.build.targets.wheel]
packages = ["catweazle_register"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

